Updates from ShareLaTeX

--- a/Meetings/20-09-18.tex
+++ b/Meetings/20-09-18.tex
@@ -1,4 +1,4 @@
-\section{Gruppemøde den 20-09-18}
+\section{Gruppemøde den 20-09-2018}
 \subsection{Mødeindkaldelse}
 Dato: 20-09-2018
 \\Tid: 08.15
@@ -22,7 +22,7 @@ Dato: 20-09-2018
 \end{enumerate}
 
 \subsection{Sprint Planlægning}
-\\\textbf{Sprint 2}
+\textbf{Sprint 2}
 \begin{enumerate}
     \item Aktør-kontekst diagram
     \item Use Case diagram
