--- a/Setup/Forside.tex
+++ b/Setup/Forside.tex
@@ -18,7 +18,7 @@
 %----------------------------------------------------------------------------------------
 
 \HRule \\[0.4cm]
-{ \huge \bfseries \titlename}\\[0.03cm]{Beerpong Master 2000} % Title of your document
+{ \huge \bfseries \titlename}\\[0.03cm]{Beerpong Table} % Title of your document
 \HRule \\[1.5cm]
 
  
@@ -29,13 +29,14 @@
 \begin{minipage}{0.4\textwidth}
 \begin{flushleft} \small
 \emph{Gruppemedlemmer:}
-\\Aaron Becerril Sanchez (AU592162)
-\\Nikolaj Holm Gylling (AU592243)
-\\Mathias Magnild Hansen (AU520773)
-\\Edward Hestnes Brunton (AU576633)
-\\Marcus Gasberg (AU587414) 
-\\Martin Gildberg Jespersen (AU593618) 
-\\Tristan Moeller (AU569046)
+\\Aaron Becerril Sanchez\\ (AU592162)
+\\Edward Hestnes Brunton\\ (AU576633)
+\\Marcus Gasberg\\ (AU587414) 
+\\Martin Gildberg Jespersen\\ (AU593618) 
+\\Martin Lundberg\\ () 
+\\Mathias Magnild Hansen\\ (AU520773)
+\\Nikolaj Holm Gylling\\ (AU592243)
+\\Tristan Moeller\\ (AU569046)
 \end{flushleft}
 \end{minipage}
 ~
