--- a/Setup/Preamble.tex
+++ b/Setup/Preamble.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,12pt,fleqn,oneside]{article} 	% Openright aabner kapitler paa hoejresider (openany begge)
+%\documentclass[a4paper,12pt,fleqn,oneside]{article} 	% Openright aabner kapitler paa hoejresider (openany begge)
 
 %===== Projekt konstanter =====
 \newcommand{\kursusTitel}{Semesterprojekt 3}
@@ -93,3 +93,5 @@
 %\usepackage{xcolor}
 %\usepackage{listings}
 \usepackage{csquotes}                       %så holder bilatex kæft
+
+
