--- a/Setup/main.tex
+++ b/Setup/main.tex
@@ -1,21 +1,17 @@
-% ====================== PREAMBLE ===============================
+\documentclass[a4paper,12pt,fleqn,oneside]{article} 
+
 \input{Setup/Preamble.tex}
 
-% =====================  FORSIDE  ===============================
-\input{Setup/Forside.tex}
+\def\titlename{Review 1}
 
 \begin{document}
 
-%======================= TodoList ===========================
-%\listoftodos
-%Indsæt to-do med \todo{skriv todo her}
+%===============FORSIDE======================
+\input{Setup/Forside.tex}
 
-\pagebreak
+\newpage
 
-%==================== Sektioner==============================
 
-\input{Meetings/17-09-18.tex}
-\input{Meetings/20-09-18.tex}
-
+%
 
 \end{document}
