--- a/Vejledermoede/24-09-18.tex
+++ b/Vejledermoede/24-09-18.tex
@@ -1,34 +1,92 @@
-\documentclass[12pt]{article}
-\usepackage[english]{babel}
-\usepackage[utf8x]{inputenc}
-\usepackage{amsmath}
-\usepackage{graphicx}
-\usepackage[colorinlistoftodos]{todonotes}
-
-\begin{document}
-
 \section{Vejledermøde den 24-09-2018}
 \subsection{Mødeindkaldelse}
 Dato: 24-09-2018
 \\Tid: 12.15
 \\Sted: Kælderen i Nygaard (Under Peter Bøgh)
 \\Deltagere: Gruppe 7 og vejleder
-\\Referent: 
+\\Referent: Tristan Møller og Marcus Gasberg
 \\Dagsorden:
 \begin{enumerate}
     \item Use Cases
     \item Risiko Analyse
     \item Ikke Funktionelle Krav
     \item Aktør-kontekst Diagram
+    \item Review
 \end{enumerate}
 
 \subsection{Referat}
- Fremmødte:
- \\Udeblevet med afbud: Martin G,
+ Fremmødte: Alle 
+ \\Udeblevet med afbud:
  \\Udeblevet uden afbud: 
  
  \begin{enumerate}
-    \item 
-\end{enumerate}
+    \item Use Cases
+    \begin{enumerate}
+        \item UC1 : 
+        \begin{enumerate}
+            \item 
+        \end{enumerate}
+        
+        \item UC2 : 
+        \begin{enumerate}
+            \item Hvorfor skal man flytte en kop?
+            \item Hvad er koblingen mellem uc1 og uc3? Spil spiller.
+            \item Se det fra brugerens perspektiv. Ikke design valg.
+            \item Tjekkes op med Kim, om der må være usecases indeni.
+            \item Flow chart kan eventuel bruges
+            \item "Flowet" ned til UC3 er for implicit - det skal være mere klart 
+            \item UC2 skal være vise alle "løsninger" mellem UC1 og UC3
+        \end{enumerate}
+        
+        \item UC3 : 
+        \begin{enumerate}
+            \item Prækondition; Spillet er igang (Skal ændres) 
+            \item Skriv alle spillets regler ned
+            \item Postkondition skal være den røde tråd til den næste UC prækondition 
+        \end{enumerate}
+        
+        \item UC4 : 
+        \begin{enumerate}
+            \item Fin, men skal fyldes på senere (Ligesom alle UC) 
+            \item Godt vi ikke binder os.
+            
+        \end{enumerate}
+        \item Overvej om vi skal skrive et niveau mere ind i UC. "Should have".
+        \item Eventuel indskriv det som [Optional] - så det fremgår at de kan være en funktion
+        \item Overvej hvad vi synes skal med - Wort case scenerio - Hvis dette, så uddyb det
+        Det er en iterativ arbejdsprocess 
+    \end{enumerate}
 
-\end{document}
+    \item Risiko Analyse
+    \begin{enumerate}
+        \item Hvad er forskellen på konsekvens og impact
+        \item Risiko analyse på det tekniske. Fx risiko for at den ikke kan registrere for at flytte kop
+        \item En del riskoer - hvad er vi usikre på lige nu: Kommunikation mellem devices osv.
+        \item Den endelige risiko skal så opdateres og skal indirekte fortælle processen, da risikoen for hvert element, teknisk og samarbejde, falder i løbet af arbejdsforløb.
+        \item Fint at have de forskellige versioner som bilag 
+        \item 
+    \end{enumerate}
+    
+    \item Ikke Funktionelle Krav
+    \begin{enumerate} 
+        \item Husk at skrive det er først iteration ved forskellige ting - så vi dokumenterer det iterative
+        \item Husk at det skal testes - hvad indebærer det at "score". 
+        \item Definér termer - Lav en definitionsliste / ordbog 
+        \item Brug de samme "ord" og termer - der skal være en råd tråd. 
+        \item Flow chart - diagram til at vise det visuelt? 
+        \item Generelt skal kravene være mere skarpe - fx "bolddispenser skal kunne registrere hurtigere end 5 sekunder (Hvordan registrere - den skal fx dispenserer boldene).
+        \item Vi skal have lavet noget FURPS+ 
+    \end{enumerate}
+    
+    \item Aktør-kontekst Diagram
+    \begin{enumerate}
+        \item Ingen opdatering 
+    \end{enumerate}
+    
+    \item Review
+    \begin{enumerate}
+        \item Vores review skal reviewes af den gruppe vi har reviewet 
+        \item Vi skal kommenterer det review vi får tilbage 
+        \item Vejleder laver en guide til os 
+    \end{enumerate}
+\end{enumerate}
