--- a/Meetings/Møde_main.tex
+++ b/Meetings/Møde_main.tex
@@ -16,6 +16,8 @@
 \input{Meetings/04-10-18.tex}
 \newpage
 \input{Meetings/18-10-18.tex}
+\newpage
+\input{Meetings/01-11-18.tex}
 
 \end{document}
 
